--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.datasource.url=jdbc:mysql://localhost:3306/vrs
+spring.datasource.username=root
+spring.datasource.password=mysql
+server.port=8080
+server.servlet.context-path=/api
+spring.jpa.hibernate.ddl-auto=none
