--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
-spring.datasource.url=jdbc:mysql://localhost:3306/vrs
+spring.datasource.url=jdbc:mysql://localhost:3306/westminister_vehicle_management_db
 spring.datasource.username=root
 spring.datasource.password=mysql
 server.port=8080
 server.servlet.context-path=/api
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
